Added Ilbåsk text (Elēbičig)

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -414,7 +414,7 @@
 			        <p>ダニエラ・ニストロム<br>
 				      <span lang="sv">Daniela Nyström</span></p>
 				      <p>イルボスク語の名前（スポル文字）：Daanieelaa Nystrøøm<br>
-				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;"></span> <em><span class="font-latin">Dāniēlā Nysĕtĕrø̄m</span></em></p>
+				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;">ᠳ᠋ᠠᠠᠨᡃᡅᡄᡄᡃᠯᠠᠠ<br>ᠨᡉᠰᢦᠲᢦᠷᡈᡈᠮ</span> <em><span class="font-latin">Dāniēlā Nysĕtĕrø̄m</span></em></p>
 			      </div>
 			      <br>
 			      <br>
@@ -440,7 +440,7 @@
 			        <p>ソニャ・エストルンド<br>
 				      <span lang="sv">Sonja Östlund</span></p>
 				      <p>イルボスク語の名前（スポル文字）：Sonjaa Østlénd<br>
-				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;"></span> <em><span class="font-latin"></span></em></p>
+				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;">ᠰᡆᠨ᠋ᢦᠶᠠᠠ<br>ᡈᠰᢦᠲᢦᠯᠧᠨ᠋ᢦᠳ</span> <em><span class="font-latin">Sonĕjā Øsĕtĕlénĕd</span></em></p>
 			      </div>
 			      <br>
 			      <br>
@@ -466,7 +466,7 @@
 			        <p>キリエ・ウルグラニア・アルカディアス・スケーウォラ<br>
 				      Kyrie Urgulania Arcadius Scaevola</p>
 				      <p>イルボスク語の名前（スポル文字）：Kyriå Urgulania Arkadius Skaaełola<br>
-				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;"></span> <em><span class="font-latin"></span></em></p>
+				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;">ᡣᠶᡉᠷᡅᢧᠥ᠋ ᡇᠷᢦᠭ᠋ᡇᠯᠠᠨ᠋ᡅᢧᠠ<br>ᠠᠷᢦᡣᠠᠳ᠋ᡅᢧᡇᠰ ᠰᢦᡣᡃᠠᠠᡄᡃᡖᡆᠯᠠ</span> <em><span class="font-latin">Ķyri'å Urĕgulani'a Arĕkadi'us Sĕkāełola</span></em></p>
 				      <p>スポルメーア民主共和国の大統領である。故郷はヘッスレルレフテオー村である。</p>
 			      </div>
 			      <br>
@@ -493,7 +493,7 @@
 			        <p>ノラ・スィオグレン<br>
 				      <span lang="sv">Nora Sjögren</span></p>
 				      <p>イルボスク語の名前（スポル文字）：Nooraa Sjøgråån<br>
-				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;"></span> <em><span class="font-latin"></span></em></p>
+				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;">ᠨᡆᡆᠷᠠᠠ<br>ᢤᡈᠭ᠋ᢦᠷᠥᠥ᠋ᠨ᠋᠋</span> <em><span class="font-latin">Nōrā Ṩøgĕrā̊n</span></em></p>
 			      </div>
 			      <br>
 			      <br>
@@ -519,7 +519,7 @@
 			        <p>マークス・スィオホルム<br>
 				      <span lang="sv">Marcus Sjöholm</span></p>
 				      <p>イルボスク語の名前（スポル文字）：Markuus Sjøøhølm<br>
-				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;"></span> <em><span class="font-latin"></span></em></p>
+				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;">ᠮᠠᠷᢦᡣᡇᡇ᠋ᠰ<br>ᢤᡈᡈᢤᡈᠯᢦᠮ</span> <em><span class="font-latin">Marĕkūs Ṩø̄ṩølĕm</span></em></p>
 			      </div>
 			      <br>
 			      <br>
@@ -545,7 +545,7 @@
 			        <p>インゲゲルド・スカースゴールド<br>
 				      <span lang="sv">Ingegärd Skarsgård</span></p>
 				      <p>イルボスク語の名前（スポル文字）：Inggeegard Skarsgard<br>
-				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;"></span> <em><span class="font-latin"></span></em></p>
+				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;">ᡅᢊᢦᠭ᠋ᡄᡄᠭ᠋ᠠᠷᢦᠳ<br>ᠰᢦᡣᠠᠷᢦᠰᢦᠭ᠋ᠠᠷᢦᠳ</span> <em><span class="font-latin">Iŋĕgēgarĕd Sĕkarĕsĕgarĕd</span></em></p>
 			      </div>
 			      <br>
 			      <br>
@@ -571,7 +571,7 @@
 			        <p>ロセマリエ・ソダーボリ<br>
 				      <span lang="sv">Rosemarie Söderborg</span></p>
 				      <p>イルボスク語の名前（スポル文字）：Rooseemaariee Søødårbøøri<br>
-				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;"></span> <em><span class="font-latin"></span></em></p>
+				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;">ᠷᡆᡆᠰᡄᡄᠮᠠᠠᠷᡃᡅᡄᡄᡃ<br>ᠰᡈᡈᠳ᠋ᠥ᠋᠋ᠷᢦᠪᡈᡈᠷᡅ</span> <em><span class="font-latin">Rōsēmāriē Sø̄dårĕbø̄ri</span></em></p>
 			      </div>
 			      <br>
 			      <br>
@@ -597,7 +597,7 @@
 			        <p>リンネェア・ソレンストラム<br>
 				      <span lang="sv">Linnéa Sörenstram</span></p>
 				      <p>イルボスク語の名前（スポル文字）：Liineeaa Søørånsträäm<br>
-				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;"></span> <em><span class="font-latin"></span></em></p>
+				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;">ᠯᡅᡅᠨᡄᡄᢧᠠᠠ<br>ᠰᡈᡈᠷᠥ᠋᠋ᠨ᠋ᢦᠰᢦᠲᢦᠷᠡᠡᠮ</span> <em><span class="font-latin">Līnē'ā Sø̄rånĕsĕtĕrǟm</span></em></p>
 			      </div>
 			      <br>
 			      <br>
@@ -623,7 +623,7 @@
 			        <p>レベッカ・スンドボリ<br>
 				      <span lang="sv">Rebecka Sundborg</span></p>
 				      <p>イルボスク語の名前（スポル文字）：Reebeekaa Séndboori<br>
-				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;"></span> <em><span class="font-latin"></span></em></p>
+				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;">ᠷᡄᡄᠪᡄᡄᡣᠠᠠ<br>ᠰᠧᠨ᠋ᢦᠳ᠋ᢦᠪᡆᡆᠷᡅ</span> <em><span class="font-latin">Rēbēkā Sénĕdĕbōri</span></em></p>
 			      </div>
 			      <br>
 			      <br>
@@ -649,7 +649,7 @@
 			        <p>イヴォン・スヴァールド<br>
 				      <span lang="sv">Yvonne Svärd</span></p>
 				      <p>イルボスク語の名前（スポル文字）：Iivoon Svärd<br>
-				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;"></span> <em><span class="font-latin"></span></em></p>
+				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;">ᡅᡅᠸᡆᡆᠨ᠋ᢦ<br>ᠰᢦᠸᠡᠷᢦᠳ</span> <em><span class="font-latin">Īvōnĕ Sĕvärĕd</span></em></p>
 			      </div>
 			      <br>
 			      <br>
@@ -675,7 +675,7 @@
 			        <p>ヘレン・ウィクストロム<br>
 				      <span lang="sv">Helen Vikström</span></p>
 				      <p>イルボスク語の名前（スポル文字）：Heehleehn Vikstrøøm<br>
-				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;"></span> <em><span class="font-latin"></span></em></p>
+				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;">ᡥᡄᡄᡀᡄᡄᠨᡥ<br>ᠸᡅᡣᢦᠰᢦᠲᢦᠷᡈᡈᠮ</span> <em><span class="font-latin">Hēḻēṉ Vikĕsĕtĕrø̄m</span></em></p>
 			      </div>
 			      <br>
 			      <br>
@@ -701,7 +701,7 @@
 			        <p>イェスカ・ウィクストロム<br>
 				      <span lang="sv">Jesca Vikström</span></p>
 				      <p>イルボスク語の名前（スポル文字）：Jeskaa Vikstrøøm<br>
-				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;"></span> <em><span class="font-latin"></span></em></p>
+				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;">ᠶᡄᠰᢦᡣᠠᠠ<br>ᠸᡅᡣᢦᠰᢦᠲᢦᠷᡈᡈᠮ</span> <em><span class="font-latin">Jesĕkā Vikĕsĕtĕrø̄m</span></em></p>
 			      </div>
 			      <br>
 			      <br>
@@ -727,7 +727,7 @@
 			        <p>ヴィヴィアン・ヴァールベルク<br>
 				      <span lang="de">Vivianne Wahlberg</span></p>
 				      <p>イルボスク語の名前（スポル文字）：Viiviiaan Vaalberk<br>
-				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;"></span> <em><span class="font-latin"></span></em></p>
+				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;">ᠸᡅᡅᠸᡅᡅᢧᠠᠠᠨ᠋᠋ᢦ<br>ᠸᠠᠠᠯᢦᠪᡄᠷᢦᡣ</span> <em><span class="font-latin">Vīvī'ānĕ Vālĕberĕk</span></em></p>
 			      </div>
 			      <br>
 			      <br>
