--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -761,7 +761,7 @@
 			        <p>オリヴィア・アクセルッソン<br>
 				      <span lang="sv">Olivia Axelsson</span></p>
 				      <p>イルボスク語の名前（スポル文字）：Ōlīvīā Akselsōn<br>
-				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;"></span> <em><span class="font-latin"></span></em></p>
+				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;">ᡆᡆᠯᡅᡅᠸᡅᡅᢧᠠᠠ<br>ᠠᡣᢦᠰᡄᠯᢦᠰᡆᡆᠨ᠋</span> <em><span class="font-latin">Ōlīvī'ā Akĕselĕsōn</span></em></p>
 			      </div>
 			      <br>
 			      <br>
