Added Okimi's gender, sexuality, and pronouns

--- a/html/ushie.html
+++ b/html/ushie.html
@@ -925,7 +925,7 @@
 			</div>
 			<div class="pride">
 			  <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
-			  <p class="caption">代名詞：</p>
+			  <p class="caption">代名詞：she/ve</p>
 			  <img class="border" src="../img/pride/Lesbian.png" alt="レズビアン（Lesbian）" title="レズビアン（Lesbian）" style="width: 200px; height: 125px;">
 			  <br>
 			</div>
@@ -936,6 +936,9 @@
 			  <p>種族：人工的な鬼<br>
 			  能力：甘い夢を呼び起こす程度の能力、悪夢を払拭する程度の能力<br>
 			  武器：刀”甘夢愛剣”、脇差”悪夢恨剣”</p>
+        <p>性自認：女<br>
+        代名詞：彼女／<ruby>奴<rt>ヴィ</rt></ruby>（she/ve）<br>
+        雌雄性：レズビアン</p>
 			  <p>　祐二とあっ子の十二歳の娘で、宇志江の姫である。</p>
 			  <p>　父親が求める多くのことで苦労しているが、彼についてはとても気にしている。</p>
 			  <p>　沖美は、実は祐二と、あっ子と、伊狸沙と血の関係はない。むしろ、あっ子が沖美に家がない事を知った後、祐二は彼女を養子にした。沖美は実際には『光藤』というお名前の未知の科学者によって作成された実験的な人造の鬼である。お名前はもともと片仮名で『オキミ』と書かれていた。</p>
