Added wiki link for lesbian

--- a/html/ushie.html
+++ b/html/ushie.html
@@ -926,7 +926,9 @@
 			<div class="pride">
 			  <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
 			  <p class="caption">代名詞：she/ve</p>
-			  <img class="border" src="../img/pride/Lesbian.png" alt="レズビアン（Lesbian）" title="レズビアン（Lesbian）" style="width: 200px; height: 125px;">
+        <a href="https://lgbtqia.fandom.com/wiki/Lesbian" target="_blank">
+			    <img class="border" src="../img/pride/Lesbian.png" alt="レズビアン（Lesbian）" title="レズビアン（Lesbian）" style="width: 200px; height: 125px;">
+        </a>
 			  <br>
 			</div>
 			<div class="body">
