Added LGBTQIA+ wiki links in the pride flags

--- a/html/ushie.html
+++ b/html/ushie.html
@@ -261,12 +261,14 @@
 		    <div class="heading">
 			  <h4>伊豐ちゆり</h4>
 			</div>
-			  <div class="pride">
-			    <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
-				<p class="caption">代名詞：she/it</p>
-			    <img class="border" src="../img/pride/NonbinaryGirl.png" alt="ノンバイナリー・ガール（Nonbinary girl）" title="ノンバイナリー・ガール（Nonbinary girl）" style="width: 200px; height: 125px;">
-				<br>
-			  </div>
+        <div class="pride">
+          <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+          <p class="caption">代名詞：she/it</p>
+          <a href="https://lgbtqia.fandom.com/wiki/Non-binary#Non-binary_woman/girl_and_non-binary_man/boy" target="_blank">
+            <img class="border" src="../img/pride/NonbinaryGirl.png" alt="ノンバイナリー・ガール（Nonbinary girl）" title="ノンバイナリー・ガール（Nonbinary girl）" style="width: 200px; height: 125px;">
+          </a>
+          <br>
+        </div>
 			<div class="body">
 			  <p>伊豐　ちゆり（いで　ちゆり）<br>
 			  Ide Chiyuri</p>
@@ -339,14 +341,18 @@
 		    <div class="heading">
 			  <h4>犬上かをる</h4>
 			</div>
-			  <div class="pride">
-			    <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
-				<p class="caption">代名詞：di/dem/dier</p>
-			    <img class="border" src="../img/pride/Intersex.png" alt="インターセックス（Intersex）" title="インターセックス（Intersex）" style="width: 200px; height: 125px;">
-				<br>
-			    <img class="border" src="../img/pride/NonbinaryGirl.png" alt="ノンバイナリー・ガール（Nonbinary girl）" title="ノンバイナリー・ガール（Nonbinary girl）" style="width: 200px; height: 125px;">
-				<br>
-			  </div>
+        <div class="pride">
+          <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+          <p class="caption">代名詞：di/dem/dier</p>
+          <a href="https://lgbtqia.fandom.com/wiki/Intersex" target="_blank">
+            <img class="border" src="../img/pride/Intersex.png" alt="インターセックス（Intersex）" title="インターセックス（Intersex）" style="width: 200px; height: 125px;">
+          </a>
+          <br>
+          <a href="https://lgbtqia.fandom.com/wiki/Non-binary#Non-binary_woman/girl_and_non-binary_man/boy" target="_blank">
+            <img class="border" src="../img/pride/NonbinaryGirl.png" alt="ノンバイナリー・ガール（Nonbinary girl）" title="ノンバイナリー・ガール（Nonbinary girl）" style="width: 200px; height: 125px;">
+          </a>
+          <br>
+        </div>
 			<div class="body">
 			  <p>犬上　かをる（いぬがみ　かをる）<br>
 			  Inugami Kaoru</p>
@@ -464,12 +470,14 @@
 		    <div class="heading">
 			  <h4>杵島也紀</h4>
 			</div>
-			<div class="pride">
-			  <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
-			  <p class="caption">代名詞：ey/em/eir</p>
-			  <img class="border" src="../img/pride/Neutrois.png" alt="ネウトゥワ（Neutrois）" title="ネウトゥワ（Neutrois）" style="width: 200px; height: 125px;">
-			  <br>
-			</div>
+        <div class="pride">
+          <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+          <p class="caption">代名詞：ey/em/eir</p>
+          <a href="https://lgbtqia.fandom.com/wiki/Neutrois" target="_blank">
+            <img class="border" src="../img/pride/Neutrois.png" alt="ネウトゥワ（Neutrois）" title="ネウトゥワ（Neutrois）" style="width: 200px; height: 125px;">
+          </a>
+          <br>
+        </div>
 			<div class="body">
 			  <p>王国の煩わしい不良少女</p>
 			  <p>杵島　也紀（きしま　やき）<br>
@@ -1976,14 +1984,18 @@
 		    <div class="heading">
 			  <h4>ヒメナ・リグエレ・イ・オルドニェズ</h4>
 			</div>
-			<div class="pride">
-			  <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
-			  <p class="caption">代名詞：she/they/ze</p>
-			  <img class="border" src="../img/pride/NonbinaryGirl.png" alt="ノンバイナリー・ガール（Nonbinary girl）" title="ノンバイナリー・ガール（Nonbinary girl）" style="width: 200px; height: 125px;">
-			  <br>
-			  <img class="border" src="../img/pride/Pansexual.png" alt="パンセクシャル（Pansexual）" title="パンセクシャル（Pansexual）" style="width: 200px; height: 125px;">
-			  <br>
-			</div>
+        <div class="pride">
+          <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+          <p class="caption">代名詞：she/they/ze</p>
+          <a href="https://lgbtqia.fandom.com/wiki/Non-binary#Non-binary_woman/girl_and_non-binary_man/boy" target="_blank">
+            <img class="border" src="../img/pride/NonbinaryGirl.png" alt="ノンバイナリー・ガール（Nonbinary girl）" title="ノンバイナリー・ガール（Nonbinary girl）" style="width: 200px; height: 125px;">
+          </a>
+          <br>
+          <a href="https://lgbtqia.fandom.com/wiki/Non-binary#Pansexual" target="_blank">
+            <img class="border" src="../img/pride/Pansexual.png" alt="パンセクシャル（Pansexual）" title="パンセクシャル（Pansexual）" style="width: 200px; height: 125px;">
+          </a>
+          <br>
+        </div>
 			<div class="body">
 			  <p>厳しいウーパールーパー教師</p>
 			  <p>ヒメナ・リグエレ・イ・オルドニェズ<br>
@@ -2051,14 +2063,18 @@
 		    <div class="heading">
 			  <h4>サライ・ピエドラブエナ・イ・リグエレ</h4>
 			</div>
-			<div class="pride">
-			  <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
-			  <p class="caption">代名詞：fae/faer</p>
-			  <img class="border" src="../img/pride/Transfeminine.png" alt="トランスフェミニン（Transfem）" title="トランスフェミニン（Transfem）" style="width: 200px; height: 125px;">
-			  <br>
-			  <img class="border" src="../img/pride/Nonbinary.png" alt="ノンバイナリー（Nonbinary）" title="ノンバイナリー（Nonbinary）" style="width: 200px; height: 125px;">
-			  <br>
-			</div>
+        <div class="pride">
+          <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+          <p class="caption">代名詞：fae/faer</p>
+          <a href="https://lgbtqia.fandom.com/wiki/Transfeminine" target="_blank">
+            <img class="border" src="../img/pride/Transfeminine.png" alt="トランスフェミニン（Transfem）" title="トランスフェミニン（Transfem）" style="width: 200px; height: 125px;">
+          </a>
+          <br>
+          <a href="https://lgbtqia.fandom.com/wiki/Non-binary" target="_blank">
+            <img class="border" src="../img/pride/Nonbinary.png" alt="ノンバイナリー（Nonbinary）" title="ノンバイナリー（Nonbinary）" style="width: 200px; height: 125px;">
+          </a>
+          <br>
+        </div>
 			<div class="body">
 			  <p>サライ・ピエドラブエナ・イ・リグエレ<br>
 			  <span lang="es">Saray Piedrabuena y Ligüerre</span></p>
