Added some heading bookmarks via id attribute

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -46,7 +46,7 @@
 		      <!-- アレント・セーデシュトレーム（Arendt Cederström） -->
 			    <div class="section">
 			      <div class="heading">
-			        <h4>アレント・セーデシュトレーム</h4>
+			        <h4 id="ArendtCederstrom">アレント・セーデシュトレーム</h4>
 			      </div>
             <div class="art-chara">
               <img class="border" src="../img/fill.png" alt="" style="width: 256px; height: 256px;">
@@ -73,7 +73,7 @@
 		      <!-- 恵墨・クラーラー・セーデシュトレーム（Esumi Klara Cederström） -->
 			    <div class="section">
 			      <div class="heading">
-			        <h4>恵墨・クラーラー・セーデシュトレーム</h4>
+			        <h4 id="EsumiCederstrom">恵墨・クラーラー・セーデシュトレーム</h4>
 			      </div>
             <div class="art-chara">
               <img class="border" src="../img/fill.png" alt="恵墨" style="width: 256px; height: 256px;">
@@ -104,7 +104,7 @@
 		      <!-- ハンナ・セーデシュトレーム（Hanna Cederström） -->
 			    <div class="section">
 			      <div class="heading">
-			        <h4>ハンナ・セーデシュトレーム</h4>
+			        <h4 id="HannaCederstrom">ハンナ・セーデシュトレーム</h4>
 			      </div>
             <div class="art-chara">
               <img class="border" src="../img/fill.png" alt="" style="width: 256px; height: 256px;">
@@ -132,7 +132,7 @@
 		      <!-- ルカス・ダールストロム（Lucas Dahlström） -->
 			    <div class="section">
 			      <div class="heading">
-			        <h4>ルカス・ダールストロム</h4>
+			        <h4 id="LucasDahlstrom">ルカス・ダールストロム</h4>
 			      </div>
             <div class="art-chara">
               <img class="border" src="../img/fill.png" alt="" style="width: 256px; height: 256px;">
