Added art gallery for Esumi Klara Cederström

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -76,7 +76,7 @@
 		      <!-- 恵墨・クラーラー・セーデシュトレーム（Esumi Klara Cederström） -->
 			    <div class="section">
 			      <div class="heading">
-			        <h4 id="EsumiCederstrom">恵墨・クラーラー・セーデシュトレーム</h4>
+			        <h4 id="EsumiKlaraCederstrom">恵墨・クラーラー・セーデシュトレーム</h4>
 			      </div>
             <div class="art-chara">
               <img class="border" src="../img/fill.png" alt="恵墨" style="width: 256px; height: 256px;">
@@ -100,6 +100,9 @@
 				      <p>種族：人工的な鬼<br>
 				      能力：神々の言葉を読む程度の能力</p>
 				      <p>アレントとハンナのもらいＮＢのいい子である。</p>
+				    <br>
+				    <a href="./gallery/spalmea/EsumiKlaraCederstrom.html" target="topframe">美術館へ行きますか？</a>
+				    <br>
 			      </div>
 			      <br>
 			      <br>
