--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -131,6 +131,9 @@
 				      <p>イルボスク語の名前（スポル文字）：Hahnaa Seederstroom / Hahnaa Skøld<br>
 				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;">ᡥᠠᠨᠠᠠ<br>ᠰᡄᡄᠳ᠋ᡄᠷᢦᠰᢦᠲ᠋ᢦᠷᡆᡆᠮ</span> <em><span class="font-latin">Haṉā Sēderĕsĕtĕrōm</span></em> / <span lang="xwo-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;">ᡥᠠᠨᠠᠠ<br>ᠰᢦᡣᡈᠮᢦᠳ</span> <em><span class="font-latin">Haṉā Sĕkølĕd</span></em></p>
 				      <p>アレントの妻であり、恵墨の養母である。</p>
+				      <br>
+				      <a href="./gallery/spalmea/HannaCederstrom.html" target="topframe">美術館へ行きますか？</a>
+				      <br>
 			      </div>
 			      <br>
 			      <br>
