--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -189,6 +189,9 @@
 				      <span lang="sv">Louise Forsborg</span></p>
 				      <p>イルボスク語の名前（スポル文字）：Luuiz Forsboori<br>
 				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;">ᠯᡇᡇ᠋ᢧᡅᠽᢦ<br>ᡫᡆᠷᢦᠰᢦᠪᡆᡆᠷᡅ</span> <em><span class="font-latin">Lū'izĕ Forĕsĕbōri</span></em></p>
+				      <br>
+				      <a href="./gallery/spalmea/LouiseForsborg.html" target="topframe">美術館へ行きますか？</a>
+				      <br>
 			      </div>
 			      <br>
 			      <br>
