--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -218,6 +218,9 @@
 				      <span lang="sv">Rut Grönborg</span></p>
 				      <p>イルボスク語の名前（スポル文字）：Ruut Grønbøøri<br>
 				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;">ᠷᡇᡇ᠋ᠲ<br>ᠭᢦᠷᡈᠨ᠋ᢦᠪᡈᡈᠷᡅ</span> <em><span class="font-latin">Rūt Gĕrønĕbø̄ri</span></em></p>
+				      <br>
+				      <a href="./gallery/spalmea/RutGronborg.html" target="topframe">美術館へ行きますか？</a>
+				      <br>
 			      </div>
 			      <br>
 			      <br>
