--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -247,6 +247,9 @@
 				      <span lang="sv">Beatrice Hägglund</span></p>
 				      <p>イルボスク語の名前（スポル文字）：Biitriees Hähghléhnhd<br>
 				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;">ᠪᡅᡅᠲ᠋ᢦᠷᡃᡅᡄᡄᡃᠰ<br>ᡥᠡᠭᡥᢦᡀᠧᠨᡥᢦᠳ᠋ᡥ</span> <em><span class="font-latin">Bītĕriēs Häḡĕḻéṉĕḏ</span></em></p>
+				      <br>
+				      <a href="./gallery/spalmea/BeatriceHagglund.html" target="topframe">美術館へ行きますか？</a>
+				      <br>
 			      </div>
 			      <br>
 			      <br>
