--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -276,6 +276,9 @@
 				      <span lang="sv">Emilie Hammarström</span></p>
 				      <p>イルボスク語の名前（スポル文字）：Emiiliijee Haahmahrhshthroohm<br>
 				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;">ᡄᠮᡅᡅᠯᡅᡅᠶᡄᡄ<br>ᡥᠠᠠᠮᡥᠠᠷᡥᢦᠰᡥᢦᠲ᠋ᡥᢦᠷᡥᡆᡆᠮᡥ</span> <em><span class="font-latin">Emīlījē Hām̱aṟĕs̱ĕṯĕṟōm̱</span></em></p>
+				      <br>
+				      <a href="./gallery/spalmea/EmilieHammarstrom.html" target="topframe">美術館へ行きますか？</a>
+				      <br>
 			      </div>
 			      <br>
 			      <br>
