--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -545,7 +545,7 @@
 			      <div class="body">
 			        <p>マークス・スィオホルム<br>
 				      <span lang="sv">Marcus Sjöholm</span></p>
-				      <p>イルボスク語の名前（スポル文字）：Markuus Sjøøhølm<br>
+				      <p>イルボスク語の名前（スポル文字）：Markuus Sjøøsjølm<br>
 				      イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;">ᠮᠠᠷᢦᡣᡇᡇ᠋ᠰ<br>ᢤᡈᡈᢤᡈᠯᢦᠮ</span> <em><span class="font-latin">Marĕkūs Ṩø̄ṩølĕm</span></em></p>
 			      </div>
 			      <br>
