--- a/html/gallery/spalmea/MirabellaLennartsson.html
+++ b/html/gallery/spalmea/MirabellaLennartsson.html
@@ -41,7 +41,7 @@
           <h2 style="text-align: left;">レファレンス</h2><hr>
           <div class="flex-gallery">
             <div class="art-ref">
-              <img class="border" src="../../../img/ref/MirabellaRefCurrent.png" alt="メリッサのレファレンス" style="width: *; height: 256px;">
+              <img class="border" src="../../../img/ref/MirabellaRefCurrent.png" alt="ミラベラのレファレンス" style="width: *; height: 256px;">
             </div>
           </div>
         </div>
