Added art gallery for Lucia Ljungborg

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -442,6 +442,9 @@
                   イルボスク語の名前（スポル文字）：Luusiiaa Jéngboori<br>
                   イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;">ᠯᡇᡇ᠋ᠰᡅᡅᢧᠠᠠ<br>ᠶᠧᢊᢦᠪᡆᡆᠷᡅ</span> <em><span class="font-latin">Lūsī'ā Jéŋĕbōri</span></em>
                 </p>
+                <br>
+                <a href="./gallery/spalmea/LuciaLjungborg.html" target="topframe">美術館へ行きますか？</a>
+                <br>
               </div>
               <br>
               <br>
