--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -481,6 +481,9 @@
                 </p>
                 <p>スコッゲド村の村長である。</p>
                 <p>※キリル文字に「<span lang="mn" class="font-cyrillic">Мягмарсүрэнгийн Цөлмогойахлагч-Кокочуэбэнггэри</span>」を書く。モンゴル文字「<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;">ᠮᠢᠶᠠᠭᠠᠮᠠᠷᠢᠰᠥᠷᠡᠩᠭᠢᠶᠢᠨ<br>ᠴᠥᠯᠥᠮᠣᠭᠣᠯᠠᠬᠠᠯᠠᠭᠠᠴ<br>ᠬᠣᠬᠣᠴᠣᠪᠡᠪᠡᠩᠭᠡᠷᠢ</span>」を書く。</p>
+                <br>
+                <a href="./gallery/spalmea/Tsolko.html" target="topframe">美術館へ行きますか？</a>
+                <br>
               </div>
               <br>
               <br>
