--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -547,6 +547,9 @@
                   イルボスク語の名前（スポル文字）：Sonjaa Østlénd<br>
                   イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;">ᠰᡆᠨ᠋ᢦᠶᠠᠠ<br>ᡈᠰᢦᠲᢦᠯᠧᠨ᠋ᢦᠳ</span> <em><span class="font-latin">Sonĕjā Øsĕtĕlénĕd</span></em>
                 </p>
+                <br>
+                <a href="./gallery/spalmea/SonjaOstlund.html" target="topframe">美術館へ行きますか？</a>
+                <br>
               </div>
               <br>
               <br>
