--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -581,6 +581,9 @@
                   イルボスク語の名前（エレー文字）：<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;">ᡣᠶᡉᠷᡅᢧᠥ᠋ ᡇᠷᢦᠭ᠋ᡇᠯᠠᠨ᠋ᡅᢧᠠ<br>ᠠᠷᢦᡣᠠᠳ᠋ᡅᢧᡇᠰ ᠰᢦᡣᡃᠠᠠᡄᡃᡖᡆᠯᠠ</span> <em><span class="font-latin">Ķyri'å Urĕgulani'a Arĕkadi'us Sĕkāełola</span></em>
                 </p>
                 <p>スポルメーア民主共和国の大統領である。故郷はヘッスレルレフテオー村である。</p>
+                <br>
+                <a href="./gallery/spalmea/KyrieScaevola.html" target="topframe">美術館へ行きますか？</a>
+                <br>
               </div>
               <br>
               <br>
