--- a/html/gallery/nizi/Ayn.html
+++ b/html/gallery/nizi/Ayn.html
@@ -29,7 +29,7 @@
     <header>
       <div class="heading">
         <h1 style="font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;">天園神關里　～ Brilliance of Heaven Pleasure</h1>
-        <h2 style="font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;">造化神録</h2>
+        <h2 style="font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;">美術館　アイン</h2>
       </div>
     </header>
     <article>
