--- a/html/gallery/nizi/Animus.html
+++ b/html/gallery/nizi/Animus.html
@@ -28,8 +28,8 @@
   <body>
     <header>
       <div class="heading">
-        <h1 style="font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;">天園神關里　～ Brilliance of Heaven Pleasure</h1>
-        <h2 style="font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;">美術館　アニムス</h2>
+        <h1 class="header-text">天園神關里　～ Brilliance of Heaven Pleasure</h1>
+        <h2 class="header-text">美術館　アニムス</h2>
       </div>
     </header>
     <article>
