--- a/html/menu.html
+++ b/html/menu.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="../css/menu.css">
   </head>
   <body>
-    <p style="font-size: 32pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Medium', 'ＭＳ ゴシック', sans-serif; text-align: center; line-height: 0em;">目次</p>
+    <p class="mokuji">目次</p>
     <br>
     <a href="top.html" target="topframe">概要</a><br>
     <a href="maegaki.html" target="topframe">０．前書き</a><br>
