Applied class "pride-head"

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -51,7 +51,7 @@
             <p class="caption">PC-98のアート</p>
           </div>
           <div class="pride">
-            <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：she/her</p>
             <a href="https://lgbtqia.fandom.com/wiki/Transgender" target="_blank">
               <img class="border" src="../img/pride/Transgender.png" alt="トランスジェンダー（Transgender）" title="トランスジェンダー（Transgender）" style="width: 200px; height: 125px;">
@@ -109,7 +109,7 @@
             <p class="caption">PC-98のアート</p>
           </div>
           <div class="pride">
-            <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：she/they</p>
             <a href="https://lgbtqia.fandom.com/wiki/Non-binary" target="_blank">
               <img class="border" src="../img/pride/Nonbinary.png" alt="ノンバイナリー（Nonbinary）" title="ノンバイナリー（Nonbinary）" style="width: 200px; height: 125px;">
@@ -163,7 +163,7 @@
             <p class="caption">PC-98のアート</p>
           </div>
           <div class="pride">
-            <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：she/they</p>
             <a href="https://lgbtqia.fandom.com/wiki/Non-binary" target="_blank">
               <img class="border" src="../img/pride/Nonbinary.png" alt="ノンバイナリー（Nonbinary）" title="ノンバイナリー（Nonbinary）" style="width: 200px; height: 125px;">
@@ -215,7 +215,7 @@
             <p class="caption">妖狐</p>
           </div>
           <div class="pride">
-            <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：she/they</p>
             <a href="https://lgbtqia.fandom.com/wiki/Transfeminine" target="_blank">
               <img class="border" src="../img/pride/Transfeminine.png" alt="トランスフェミニン（Transfeminine）" title="トランスフェミニン（Transfeminine）" style="width: 200px; height: 125px;">
@@ -267,7 +267,7 @@
             <p class="caption">アニムス</p>
           </div>
           <div class="pride">
-            <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：she/her</p>
             <a href="https://lgbtqia.fandom.com/wiki/Omnisexual" target="_blank">
               <img class="border" src="../img/pride/Omnisexual.png" alt="オムニセクシャル（Omnisexual）" title="オムニセクシャル（Omnisexual）" style="width: 200px; height: 125px;">
@@ -301,7 +301,7 @@
             <p class="caption">アイン</p>
           </div>
           <div class="pride">
-            <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：they/it</p>
             <a href="https://lgbtqia.fandom.com/wiki/Non-binary" target="_blank">
               <img class="border" src="../img/pride/Nonbinary.png" alt="ノンバイナリー（Nonbinary）" title="ノンバイナリー（Nonbinary）" style="width: 200px; height: 125px;">
@@ -335,7 +335,7 @@
             <p class="caption">ボルルマー</p>
           </div>
           <div class="pride">
-            <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：they/them</p>
             <a href="https://lgbtqia.fandom.com/wiki/Non-binary" target="_blank">
               <img class="border" src="../img/pride/Nonbinary.png" alt="ノンバイナリー（Nonbinary）" title="ノンバイナリー（Nonbinary）" style="width: 200px; height: 125px;">
@@ -371,7 +371,7 @@
             <p class="caption">錯誤</p>
           </div>
           <div class="pride">
-            <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：she/any</p>
             <a href="https://lgbtqia.fandom.com/wiki/Intersex" target="_blank">
               <img class="border" src="../img/pride/Intersex.png" alt="インターセックス（Intersex）" title="インターセックス（Intersex）" style="width: 200px; height: 125px;">
@@ -449,7 +449,7 @@
             <p class="caption">ハップ</p>
           </div>
           <div class="pride">
-            <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：she/they</p>
             <a href="https://lgbtqia.fandom.com/wiki/Intersex" target="_blank">
               <img class="border" src="../img/pride/Intersex.png" alt="インターセックス（Intersex）" title="インターセックス（Intersex）" style="width: 200px; height: 125px;">
@@ -490,7 +490,7 @@
             <p class="caption">イドラ</p>
           </div>
           <div class="pride">
-            <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：</p>
             <a href="https://lgbtqia.fandom.com/wiki/" target="_blank">
               <img class="border" src="../img/pride/" alt="" title="" style="width: 200px; height: 125px;">
@@ -529,7 +529,7 @@
             <p class="caption">エリサベト</p>
           </div>
           <div class="pride">
-            <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：she/they/hu</p>
             <a href="https://lgbtqia.fandom.com/wiki/Demigender#Demigirl" target="_blank">
               <img class="border" src="../img/pride/Demigirl.png" alt="デミ女（Demigirl）" title="デミ女（Demigirl）" style="width: 200px; height: 125px;">
@@ -569,7 +569,7 @@
             <p class="caption">オルハ</p>
           </div>
           <div class="pride">
-            <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：</p>
             <a href="https://lgbtqia.fandom.com/wiki/" target="_blank">
               <img class="border" src="../img/pride/" alt="" title="" style="width: 200px; height: 125px;">
@@ -604,7 +604,7 @@
             <p class="caption">聖姫</p>
           </div>
           <div class="pride">
-            <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：</p>
             <a href="https://lgbtqia.fandom.com/wiki/" target="_blank">
               <img class="border" src="../img/pride/" alt="" title="" style="width: 200px; height: 125px;">
@@ -639,7 +639,7 @@
             <p class="caption">岸姫</p>
           </div>
           <div class="pride">
-            <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：she/he</p>
             <a href="https://lgbtqia.fandom.com/wiki/Bigender" target="_blank">
               <img class="border" src="../img/pride/Bigender.png" alt="バイジェンダー（Bigender）" title="バイジェンダー（Bigender）" style="width: 200px; height: 125px;">
@@ -674,7 +674,7 @@
             <p class="caption">イリィ</p>
           </div>
           <div class="pride">
-            <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：</p>
             <a href="https://lgbtqia.fandom.com/wiki/" target="_blank">
               <img class="border" src="../img/pride/" alt="" title="" style="width: 200px; height: 125px;">
@@ -708,7 +708,7 @@
             <p class="caption">サンダ</p>
           </div>
           <div class="pride">
-            <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：</p>
             <a href="https://lgbtqia.fandom.com/wiki/" target="_blank">
               <img class="border" src="../img/pride/" alt="" title="" style="width: 200px; height: 125px;">
@@ -742,7 +742,7 @@
             <p class="caption">スカーレット</p>
           </div>
           <div class="pride">
-            <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：</p>
             <a href="https://lgbtqia.fandom.com/wiki/" target="_blank">
               <img class="border" src="../img/pride/" alt="" title="" style="width: 200px; height: 125px;">
