--- a/html/ushie.html
+++ b/html/ushie.html
@@ -296,7 +296,7 @@
               <h4>伊豐ちゆり</h4>
             </div>
             <div class="pride">
-              <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="caption">代名詞：she/it</p>
               <a href="https://lgbtqia.fandom.com/wiki/Non-binary#Non-binary_woman/girl_and_non-binary_man/boy" target="_blank">
                 <img class="border" src="../img/pride/NonbinaryGirl.png" alt="ノンバイナリー・ガール（Nonbinary girl）" title="ノンバイナリー・ガール（Nonbinary girl）" style="width: 200px; height: 125px;">
@@ -388,7 +388,7 @@
               <h4>犬上かをる</h4>
             </div>
             <div class="pride">
-              <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="caption">代名詞：di/dem/dier</p>
               <a href="https://lgbtqia.fandom.com/wiki/Intersex" target="_blank">
                 <img class="border" src="../img/pride/Intersex.png" alt="インターセックス（Intersex）" title="インターセックス（Intersex）" style="width: 200px; height: 125px;">
@@ -539,7 +539,7 @@
               <h4>杵島也紀</h4>
             </div>
             <div class="pride">
-              <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="caption">代名詞：ey/em/eir</p>
               <a href="https://lgbtqia.fandom.com/wiki/Neutrois" target="_blank">
                 <img class="border" src="../img/pride/Neutrois.png" alt="ネウトゥワ（Neutrois）" title="ネウトゥワ（Neutrois）" style="width: 200px; height: 125px;">
@@ -1074,7 +1074,7 @@
               <h4>笹川沖美</h4>
             </div>
             <div class="pride">
-              <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="caption">代名詞：she/ve</p>
               <a href="https://lgbtqia.fandom.com/wiki/Lesbian" target="_blank">
                 <img class="border" src="../img/pride/Lesbian.png" alt="レズビアン（Lesbian）" title="レズビアン（Lesbian）" style="width: 200px; height: 125px;">
@@ -2297,7 +2297,7 @@
               <h4>ヒメナ・リグエレ・イ・オルドニェズ</h4>
             </div>
             <div class="pride">
-              <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="caption">代名詞：she/they/ze</p>
               <a href="https://lgbtqia.fandom.com/wiki/Non-binary#Non-binary_woman/girl_and_non-binary_man/boy" target="_blank">
                 <img class="border" src="../img/pride/NonbinaryGirl.png" alt="ノンバイナリー・ガール（Nonbinary girl）" title="ノンバイナリー・ガール（Nonbinary girl）" style="width: 200px; height: 125px;">
@@ -2388,7 +2388,7 @@
               <h4>サライ・ピエドラブエナ・イ・リグエレ</h4>
             </div>
             <div class="pride">
-              <p class="caption" style="text-align: center; font-size: 16pt; font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', sans-serif;"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="caption">代名詞：fae/faer</p>
               <a href="https://lgbtqia.fandom.com/wiki/Transfeminine" target="_blank">
                 <img class="border" src="../img/pride/Transfeminine.png" alt="トランスフェミニン（Transfem）" title="トランスフェミニン（Transfem）" style="width: 200px; height: 125px;">
